# FinanceProjects

./: .gitignore  run_pnl.py
11-pnl-futures/: README.md  pnl_futures.py
11-pnl-stocks/: pnl_stocks.py
ch11_pnl_futures/: pnl_futures.py
ch11_pnl_stocks/: README.md  pnl_stocks.py
position-aggregator/: .gitignore  README.md  pyproject.toml
position-aggregator/src/posagg/: cli.py  config.py  engine.py  marks.py  models.py
trading_calendar_mini/: .gitignore  README.md  pyproject.toml
trading_calendar_mini/trading_calendar/: cli.py  config_loader.py  sessions.py  tz.py
trading_calendar_mini/trading_calendar/config/markets/: cme_es.yaml
